Fix sort by selector being cut off

--- a/client/src/reddit/styles/subreddits.css
+++ b/client/src/reddit/styles/subreddits.css
@@ -2,3 +2,7 @@
   margin: auto 3%;
   width: 94%;
 }
+
+.sort-by-selector-input {
+  height: 100%;
+}
